# macro_knob

./: CMakeLists.txt  PROJECT.md  TEST_INFRA.md  TEST_READY.md  VolumeKnobMacro_ProjectPlan.md  build.bat  config_server.py  debug_test.cpp  fix.py  fix2.py  fix_appjs.py  fix_autosave.py  fix_dropdown.py  fix_everything.py  fix_save_close.py  fix_svg_coords.py  fix_wpath.py  kill_daemon.py  kill_daemon_fixed.py  patch_app.py  patch_asfw.py  patch_auto_restart.py  patch_color_reset.py  patch_config.py  patch_config_autohide.py  patch_config_server.py  patch_config_spawn.py  patch_config_spawn2.py  patch_fg_alt.py  patch_foreground.py  patch_haptic.py  patch_input_autohide.py  patch_input_hook.py  patch_input_hook_dyn.py  patch_input_hook_nested.py  patch_multi_key.py  patch_open_folder.py  patch_radial.py  patch_radial_autohide.py  patch_radial_dyn.py  (+15 more)
 .agents/explorer_m3_3/: handoff.md
 .agents/worker_m1_refactor/: handoff.md
.agents/: ORIGINAL_REQUEST.md
.agents/auditor_m1/: .gitkeep  BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m1_refactor/: .gitkeep  BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/auditor_m2/: BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m1_1/: .gitkeep  BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  progress.md
.agents/challenger_m1_2/: .gitkeep  BRIEFING.md  ORIGINAL_REQUEST.md  handoff.md  (+1 more)
config/: config.json
include/: .gitkeep
resources/: .gitkeep
src/: config_store.cpp  config_store.h  input_hook.cpp  input_hook.h  macro_runner.cpp  macro_runner.h  main.cpp  radial_menu.cpp  radial_menu.h
tests/: compile_tests.bat  config_store_tests.cpp  diagnostic.cpp  diagnostic_ui.cpp  hook_stress_tests.cpp  main_diagnostic.cpp  modify_config.bat  query_volume.cpp  run_interactive_test.bat  self_press.ahk  test_rotary_hook.py  test_runner.py
ui/: app.js  index.html  styles.css
(+159 files in other folders)
